--- a/admin/graphql/package.json
+++ b/admin/graphql/package.json
@@ -11,10 +11,19 @@
   },
   "dependencies": {
     "@apollo/client": "3.8.7",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@floating-ui/react": "0.26.1",
     "@fontsource/open-sans": "5.0.17",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "1.7.17",
     "@hookform/resolvers": "3.3.2",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "@react-google-maps/api": "2.19.2",
     "apexcharts": "3.44.0",
     "apollo-upload-client": "17.0.0",
@@ -41,16 +50,18 @@
     "rc-pagination": "3.7.0",
     "rc-progress": "3.5.1",
     "rc-table": "7.22.2",
+    "rc-tree": "^5.8.8",
     "react": "18.2.0",
-    "react-countdown": "2.3.5",
     "react-apexcharts": "1.4.1",
     "react-content-loader": "6.2.1",
+    "react-countdown": "2.3.5",
     "react-datepicker": "4.21.0",
     "react-dom": "18.2.0",
     "react-dropzone": "14.2.3",
     "react-hook-form": "7.48.2",
     "react-i18next": "13.3.1",
     "react-laag": "2.0.5",
+    "react-modal": "^3.16.1",
     "react-phone-input-2": "2.15.1",
     "react-quill": "2.0.0",
     "react-quill-emoji": "0.1.9",
@@ -82,6 +93,7 @@
     "@types/react": "18.2.33",
     "@types/react-datepicker": "4.19.1",
     "@types/react-dom": "18.2.14",
+    "@types/react-modal": "^3.16.3",
     "@types/react-scroll": "1.8.9",
     "@types/react-select": "5.0.1",
     "@types/sanitize-html": "2.9.5",
