--- a/admin/graphql/package.json
+++ b/admin/graphql/package.json
@@ -67,6 +67,7 @@
     "react-quill-emoji": "0.1.9",
     "react-scroll": "1.9.0",
     "react-select": "5.8.0",
+    "react-switch": "^7.0.0",
     "react-toastify": "9.1.3",
     "react-use": "17.4.0",
     "react-waypoint": "10.3.0",
