--- a/admin/graphql/.graphql-let.yml
+++ b/admin/graphql/.graphql-let.yml
@@ -1,4 +1,4 @@
-schema: http://localhost:4000/graphql
+schema: http://3.86.249.147:4000/graphql
 documents: ./src/**/*.graphql
 plugins:
   - typescript-operations
